--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,20 @@
 	border: 1px solid rgba(0, 0, 0, .125);
 }
 
+.todos-list__item:first-child {
+	border-top-left-radius: 0.25rem;
+	border-top-right-radius: 0.25rem;
+}
+
+.todos-list__item:last-child {
+	border-bottom-right-radius: 0.25rem;
+	border-bottom-left-radius: 0.25rem;
+}
+
+.todos-list__item.is-active {
+	border-left: 4px solid #ff1493;
+}
+
 .todos-list__item-button {
 	display: inline-block;
 	font-weight: 400;
